Bug 1301629 - Fix incorrect parameter name in comments. r=ettseng

--HG--
extra : rebase_source : a45c6c9641ceb70301e8bcd957a3e21c95aef423